diesel_derives/src/tests/snapshots/diesel_derives__tests__sql_type_1 (postgres).snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(SqlType)]\n#[diesel(postgres_type(oid = 42, array_oid = 142))]\nstruct Integer;\n"
---
const _: () = {
    use ::diesel;
    impl diesel::sql_types::SqlType for Integer {
        type IsNull = diesel::sql_types::is_nullable::NotNull;
        const IS_ARRAY: bool = false;
    }
    impl diesel::sql_types::SingleValue for Integer {}
    impl diesel::sql_types::HasSqlType<Integer> for diesel::pg::Pg {
        fn metadata(_: &mut Self::MetadataLookup) -> diesel::pg::PgTypeMetadata {
            diesel::pg::PgTypeMetadata::new(42, 142)
        }
    }
};
